# c4

./: .gitignore  Cargo.toml  Makefile  README.md  migration_demo.md
c4-client/: Cargo.toml
c4-client/src/proto/: object_storage.proto  object_storage.rs
client/: Cargo.toml  build.rs
client/src/proto/: object_storage.proto  object_storage.rs
db/: Cargo.toml
db/benches/: object_storage_benchmark.rs
db/src/: lib.rs  main.rs
db/src/api/: grpc.rs
db/src/hashing/: consistent.rs
db/src/object_storage/: mod.rs
db/src/object_storage/simple/: file.rs  mod.rs  model.rs  object_storage_simple.rs
db/src/storage/: errors.rs  mod.rs
db/src/storage/simple/: buckets_metadata_model.rs  buckets_metadata_storage.rs  chunk_file_storage.rs  file.rs  meta.rs  mod.rs
db/tests/: distributed_tests.rs  grpc_api_simple_tests.rs  grpc_api_tests.rs  object_storage_simple_tests.rs
encoder-macro/: Cargo.toml
encoder-macro/src/: lib.rs
encoder-macro/tests/: test_macro.rs
encoder/src/: lib.rs
encoder/tests/: test_encoder.rs
encoders-comparison/: Cargo.toml  build.rs  plot_benchmark.gp
encoders-comparison/results/: benchmark_results.csv
encoders-comparison/src/: encoder.rs  main.rs
grpc-server/: Cargo.toml  build.rs
grpc-server/src/: lib.rs  object_storage.rs
master/: Cargo.toml
master/src/: lib.rs  main.rs  model.rs
master/src/hashing/: consistent.rs  mod.rs
master/src/migration/: dto.rs  migration_plan.rs  migration_planner.rs  migration_service.rs  mod.rs
master/tests/: migration_tests.rs  replication_tests.rs
src/: lib.rs  main.rs  object_storage.rs
src/api/: errors.rs  mod.rs  object_storage.rs
src/object_storage/: errors.rs  mod.rs
src/storage/: file.rs  mod.rs  model.rs  object_storage_simple.rs  utils.rs
tests/: object_storage_simple_tests.rs
(+6 files in other folders)
