[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
encoder = { path = "../encoder" }
grpc-server = { path = "../grpc-server" }
tonic = "0.14.2"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
async-stream = "0.3"
futures-util = "0.3"
regex = "1.12.2"

[dev-dependencies]
tempfile = "3.22.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
