[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
encoder = { path = "../encoder" }
grpc-server = { path = "../grpc-server" }
tonic = "0.14.2"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
async-stream = "0.3"
futures-util = "0.3"
regex = "1.12.2"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.22.0"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
master = { path = "../master" }

[dev-dependencies.criterion]
version = "0.5"
features = ["html_reports"]

[dev-dependencies.futures]
version = "0.3"

[[bench]]
name = "object_storage_benchmark"
harness = false
