[package]
name = "master"
version = "0.1.0"
edition = "2024"

[dependencies]
grpc-server = { path = "../grpc-server" }
tonic = "0.14.2"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
async-stream = "0.3"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4" }

[dev-dependencies]
db = { path = "../db" }
tempfile = "3.23"

[build-dependencies]
tonic-build = "0.14.2"
